# mf_register_bot

./: .gitignore  README.md  memo.md  pyproject.toml
src/mf_register_bot/: __init__.py  mf_me_automation.py
